# agent-first-service

./: .env.example  .gitignore  AgentFirstByExample.md  Briefing.md  Makefile  README.md  agent-first-flow.drawio  pyproject.toml
agent_protocol/: catalog.py  envelope.py  errors.py  field_docs.py  local_env.py  mcp_adapter.py  mcp_sse.py
dashboard/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: BriefPanel.tsx  CreatedProjectPanel.tsx  ServiceSnapshot.tsx  TraceEvent.tsx  TracePanel.tsx
dashboard/lib/: types.ts  useServiceSnapshot.ts  useTraceStream.ts
docs/: implementation_plan.md  implementation_status.md  mcp_wrapping_plan.md  p2a-vs-a2a-interfaces.md  test_inventory.md
fixtures/demo-seed/: communications.json  people.json  projects.json
fixtures/llm_recordings/: README.md
scripts/: check_live_stack.py
services/client_agent/: app.py  llm.py  main.py  models.py  runner.py  state.py  trace_bus.py
services/communications/: app.py  db.py  main.py  mcp_main.py  mcp_registry.py  mcp_server.py  models.py  seed.py
services/orchestrator/: app.py  db.py  graph.py  llm.py  main.py  mcp_tools.py  models.py  runner.py  state.py  tools.py  trace_bus.py
services/people/: app.py  db.py  main.py  mcp_main.py  mcp_registry.py  mcp_server.py  models.py  seed.py
services/projects/: app.py  db.py  main.py  mcp_main.py  mcp_registry.py  mcp_server.py  models.py  seed.py
tests/: conftest.py
tests/mcp/: _sse_helpers.py  test_mcp_adapter_capability_mapping.py  (+13 more)
(+85 files in other folders)
